--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "node ./bin/www"
   },
   "engines": {
-      "node": "0.12.x",
-      "npm": "2.13.x"
-    },
+    "node": "0.12.x",
+    "npm": "2.13.x"
+  },
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -17,6 +17,8 @@
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3"
+    "sequelize": "^3.3.2",
+    "serve-favicon": "~2.1.3",
+    "sqlite3": "^3.0.9"
   }
 }
