--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
+    "debug": ">=2.6.9",
     "ejs": ">=2.5.5",
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "express-session": "^1.11.3",
     "method-override": "^2.3.1",
-    "morgan": "~1.3.0",
+    "morgan": ">=1.9.1",
     "pg": "^4.4.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.3.2",
+    "sequelize": ">=5.3.0",
     "serve-favicon": "~2.1.3"
   }
 }
